syntax = "proto3";
package common;

message Building {
  int32 id = 1;
  string name = 2;
  int32 level = 3;
  int32 fortress_id = 4;
}

message NewBuilding {
  string name = 1;
  int32 level = 2;
  int32 fortress_id = 3;
}

message UpdateBuilding {
  int32 id = 1;
  optional string name = 2;
  optional int32 level = 3;
  optional int32 fortress_id = 4;
}

message Fortress {
  int32 id = 1;
  int32 gold = 2;
  int32 food = 3;
  int32 wood = 4;
  int32 energy = 5;
}

message NewFortress {
  int32 gold = 1;
  int32 food = 2;
  int32 wood = 3;
  int32 energy = 4;
}

message UpdateFortress {
  int32 id = 1;
  optional int32 gold = 2;
  optional int32 food = 3;
  optional int32 wood = 4;
  optional int32 energy = 5;
}

message Costs {
  int32 gold = 1;
  int32 food = 2;
  int32 wood = 3;
  int32 energy = 4;
}
